充电座的相关修复与重写
- 修复了充电座站上去的事件，现在可以无线充电了！
- 变化了充电座的充电判断：无线充电现在不受电压等级限制——低等级的充电座仍然能无线充电高等级的！
- 充电速度仍然受到充电座本身的限制。
- 充电座充电的顺序改变：主手、副手、头盔、胸甲、护腿、靴子、快捷栏0~8、物品栏左上到右下